fix flickering

--- a/src/assets/styles/components/interaction-areas.scss
+++ b/src/assets/styles/components/interaction-areas.scss
@@ -7,7 +7,7 @@ $video-player-interaction-area-marker-default-color : #FF620C;
 
   &.vjs-user-active {
     .interaction-areas-container {
-      opacity: 1;
+      display: block;
     }
   }
 
@@ -17,13 +17,12 @@ $video-player-interaction-area-marker-default-color : #FF620C;
     height: 100%;
     top: 50%;
     left: 50%;
-    opacity: 0;
     transform: translate(-50%, -50%);
-    transition: opacity 0.5s;
+    display: none;
     z-index: 1;
 
     &:hover {
-      opacity: 1;
+      display: block;
     }
 
     .go-back-button,
